--- a/larousse/index.html
+++ b/larousse/index.html
@@ -49,7 +49,7 @@
       }
     </style>
   </head>
-  <body class="pt-5 bg-light">
+  <body class="pt-0 pt-lg-5 bg-light">
     <div class="container mt-5">
       <div class="row">
         <div class="col-12">
