--- a/larousse/index.html
+++ b/larousse/index.html
@@ -50,7 +50,7 @@
     </style>
   </head>
   <body class="pt-0 pt-lg-5 bg-light">
-    <div class="container mt-5">
+    <div class="container mt-0 mt-lg-5">
       <div class="row">
         <div class="col-12">
           <input
