--- a/larousse/index.html
+++ b/larousse/index.html
@@ -41,5 +41,5 @@
 
 <html>
 
-<script type="text/javascript" src="js/search.js"></script>
+<script type="text/javascript" src="search.js"></script>
 
