--- a/larousse/index.html
+++ b/larousse/index.html
@@ -1,12 +1,160 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no"
+    />
     <title>PRO BTP Dico</title>
+    <link rel="manifest" href="manifest.webmanifest">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <style>
-      *,*::before,*::after{box-sizing:border-box;}body{margin:0;font-family:var(--bs-font-sans-serif);font-size:1rem;font-weight:400;line-height:1.5;color:#212529;background-color:#fff;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:rgba(0,0,0,0);}b{font-weight:bolder;}.small{font-size:0.875em;}input{margin:0;font-family:inherit;font-size:inherit;line-height:inherit;overflow:visible;}::-moz-focus-inner{padding:0;border-style:none;}.container{width:100%;padding-right:1rem;padding-left:1rem;margin-right:auto;margin-left:auto;}@media (min-width: 576px){.container{max-width:540px;}}@media (min-width: 768px){.container{max-width:720px;}}@media (min-width: 992px){.container{max-width:960px;}.mt-lg-5{margin-top:3rem!important;}}@media (min-width: 1200px){.container{max-width:1140px;}}@media (min-width: 1400px){.container{max-width:1320px;}}.row{--bs-gutter-x:1.5rem;--bs-gutter-y:0;display:flex;flex:1 0 100%;flex-wrap:wrap;margin-top:calc(var(--bs-gutter-y) * -1);margin-right:calc(var(--bs-gutter-x) / -2);margin-left:calc(var(--bs-gutter-x) / -2);}.row > *{flex-shrink:0;width:100%;max-width:100%;padding-right:calc(var(--bs-gutter-x) / 2);padding-left:calc(var(--bs-gutter-x) / 2);margin-top:var(--bs-gutter-y);}.col-12{flex:0 0 auto;width:100%;}.form-control{display:block;width:100%;min-height:calc(1.5em + 0.75rem + 2px);padding:.375rem .75rem;font-size:1rem;font-weight:400;line-height:1.5;color:#495057;background-color:#fff;background-clip:padding-box;border:1px solid #ced4da;appearance:none;border-radius:.25rem;transition:border-color .15s ease-in-out,box-shadow .15s ease-in-out;}@media (prefers-reduced-motion: reduce){.form-control{transition:none;}}.form-control:focus{color:#495057;background-color:#fff;border-color:#8bbafe;outline:0;box-shadow:0 0 0 .2rem rgba(13,110,253,.25);}.form-control::placeholder{color:#6c757d;opacity:1;}.form-control:disabled{background-color:#e9ecef;opacity:1;}.d-flex{display:flex!important;}.mt-3{margin-top:1rem!important;}.py-2{padding-top:.5rem!important;padding-bottom:.5rem!important;}.text-center{text-align:center!important;}.text-dark{color:#343a40!important;}.bg-light{background-color:#f8f9fa!important;}
+      *,
+      *::before,
+      *::after {
+        box-sizing: border-box;
+      }
+      body {
+        margin: 0;
+        font-family: var(--bs-font-sans-serif);
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #212529;
+        background-color: #fff;
+        -webkit-text-size-adjust: 100%;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      }
+      b {
+        font-weight: bolder;
+      }
+      .small {
+        font-size: 0.875em;
+      }
+      input {
+        margin: 0;
+        font-family: inherit;
+        font-size: inherit;
+        line-height: inherit;
+        overflow: visible;
+      }
+      ::-moz-focus-inner {
+        padding: 0;
+        border-style: none;
+      }
+      .container {
+        width: 100%;
+        padding-right: 1rem;
+        padding-left: 1rem;
+        margin-right: auto;
+        margin-left: auto;
+      }
+      @media (min-width: 576px) {
+        .container {
+          max-width: 540px;
+        }
+      }
+      @media (min-width: 768px) {
+        .container {
+          max-width: 720px;
+        }
+      }
+      @media (min-width: 992px) {
+        .container {
+          max-width: 960px;
+        }
+        .mt-lg-5 {
+          margin-top: 3rem !important;
+        }
+      }
+      @media (min-width: 1200px) {
+        .container {
+          max-width: 1140px;
+        }
+      }
+      @media (min-width: 1400px) {
+        .container {
+          max-width: 1320px;
+        }
+      }
+      .row {
+        --bs-gutter-x: 1.5rem;
+        --bs-gutter-y: 0;
+        display: flex;
+        flex: 1 0 100%;
+        flex-wrap: wrap;
+        margin-top: calc(var(--bs-gutter-y) * -1);
+        margin-right: calc(var(--bs-gutter-x) / -2);
+        margin-left: calc(var(--bs-gutter-x) / -2);
+      }
+      .row > * {
+        flex-shrink: 0;
+        width: 100%;
+        max-width: 100%;
+        padding-right: calc(var(--bs-gutter-x) / 2);
+        padding-left: calc(var(--bs-gutter-x) / 2);
+        margin-top: var(--bs-gutter-y);
+      }
+      .col-12 {
+        flex: 0 0 auto;
+        width: 100%;
+      }
+      .form-control {
+        display: block;
+        width: 100%;
+        min-height: calc(1.5em + 0.75rem + 2px);
+        padding: 0.375rem 0.75rem;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #495057;
+        background-color: #fff;
+        background-clip: padding-box;
+        border: 1px solid #ced4da;
+        appearance: none;
+        border-radius: 0.25rem;
+        transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+      }
+      @media (prefers-reduced-motion: reduce) {
+        .form-control {
+          transition: none;
+        }
+      }
+      .form-control:focus {
+        color: #495057;
+        background-color: #fff;
+        border-color: #8bbafe;
+        outline: 0;
+        box-shadow: 0 0 0 0.2rem rgba(13, 110, 253, 0.25);
+      }
+      .form-control::placeholder {
+        color: #6c757d;
+        opacity: 1;
+      }
+      .form-control:disabled {
+        background-color: #e9ecef;
+        opacity: 1;
+      }
+      .d-flex {
+        display: flex !important;
+      }
+      .mt-3 {
+        margin-top: 1rem !important;
+      }
+      .py-2 {
+        padding-top: 0.5rem !important;
+        padding-bottom: 0.5rem !important;
+      }
+      .text-center {
+        text-align: center !important;
+      }
+      .text-dark {
+        color: #343a40 !important;
+      }
+      .bg-light {
+        background-color: #f8f9fa !important;
+      }
     </style>
   </head>
   <body class="bg-light">
@@ -22,11 +170,16 @@
           />
         </div>
         <div class="col-12 text-center py-2 small text-dark">
-          <div id="count"><span class="mt-5 pt-5"> <br /></span><br /><b>Commencez à taper votre recherche dans le champ ci-dessus pour parcourir le Larouse PRO BTP !</b><br />Pour toute demande d’évolution ou d’ajout de notion, cliquez sur le bouton “contact” en bas à droite.</div>
+          <div id="count">
+            <span class="mt-5 pt-5"> <br /></span><br /><b
+              >Commencez à taper votre recherche dans le champ ci-dessus pour
+              parcourir le Larouse PRO BTP !</b
+            ><br />Pour toute demande d’évolution ou d’ajout de notion, cliquez
+            sur le bouton “contact” en bas à droite.
+          </div>
         </div>
 
-          <div id="result" class="col-12"></div>
-
+        <div id="result" class="col-12"></div>
       </div>
     </div>
   </body>
@@ -34,12 +187,20 @@
       rel="stylesheet"
       href="/css/styles.css"
     /> -->
-  <link
-      rel="stylesheet"
-      href="css/bootstrap.css"
-    />
+  <link rel="stylesheet" href="css/bootstrap.css" />
 
-<html>
-
-<script type="text/javascript" src="search.js"></script>
-
+  <html>
+    <script type="text/javascript" src="search.js"></script>
+    <script>
+      // Check that service workers are supported
+      if ('serviceWorker' in navigator) {
+        // Use the window load event to keep the page load performant
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('sw.js', {
+            scope: './',
+          });
+        });
+      }
+    </script>
+  </html>
+</html>
