--- a/larousse/index.html
+++ b/larousse/index.html
@@ -77,9 +77,9 @@
   </body>
 
   <html>
-    <script type="text/javascript" src="js/search.min.js"></script>
-    <script type="text/javascript" src="js/getdata-dev.js"></script>
-    <script type="module" src="js/app.js"></script>
+    <script type="text/javascript" src="search.min.js"></script>
+    <script type="text/javascript" src="getdata-dev.js"></script>
+    <script type="module" src="app.js"></script>
     <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('sw.js', {scope: './'});
