--- a/larousse/index.html
+++ b/larousse/index.html
@@ -78,7 +78,7 @@
 
   <html>
     <script type="text/javascript" src="search.min.js"></script>
-    <script type="text/javascript" src="getdata-dev.js"></script>
+    <!-- <script type="text/javascript" src="getdata-dev.js"></script> -->
     <script type="module" src="app.js"></script>
     <script>
       if ('serviceWorker' in navigator) {
