--- a/larousse/index.html
+++ b/larousse/index.html
@@ -44,7 +44,7 @@
     
     <!-- Install Modal -->
     <div
-      class="modal"
+      class="modal hidden"
       id="installPromptModal"
       tabindex="-1"
       role="dialog"
