--- a/larousse/index.html
+++ b/larousse/index.html
@@ -86,7 +86,10 @@
       if (window.matchMedia('(display-mode: standalone)').matches) {
         $('#installPromptModal').addClass('hidden');
         // console.log('prompt dismissed !');
-      }
+      };
+      window.addEventListener('appinstalled', (evt) => {
+        $('#installPromptModal').addClass('hidden');
+      });
     </script>
   </html>
 </html>
