--- a/larousse/index.html
+++ b/larousse/index.html
@@ -6,6 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+    <link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#0080ff">
+    <meta name="apple-mobile-web-app-title" content="Le dico">
+    <meta name="application-name" content="Le dico">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#f5faff">
     <meta http-equiv="Access-Control-Allow-Origin" content="*" />
     <title>PRO BTP Dico</title>
     <link rel="manifest" href="manifest.webmanifest" />
