--- a/larousse/index.html
+++ b/larousse/index.html
@@ -86,6 +86,7 @@
 
   <html>
     <script type="text/javascript" src="search.min.js"></script>
+    <script type="module" src="getdata-dev.js"></script>
     <script type="module" src="app.js"></script>
     <script>
       if ('serviceWorker' in navigator) {
