--- a/larousse/index.html
+++ b/larousse/index.html
@@ -85,8 +85,8 @@
   </body>
 
   <html>
-    <script type="text/javascript" src="search.min.js"></script>
-    <script type="module" src="getdata-dev.js"></script>
+    <script type="text/javascript" src="search.js"></script>
+    <!-- <script type="module" src="getdata-dev.js"></script> -->
     <script type="module" src="app.js"></script>
     <script>
       if ('serviceWorker' in navigator) {
