--- a/larousse/index.html
+++ b/larousse/index.html
@@ -66,19 +66,8 @@
           conditions, installez l'application PRO BTP Dico !
         </p>
         <div class="action">
-          <button
-            type="button"
-            class="btn btn-close"
-            data-dismiss="modal"
-          >
-            Fermer
-          </button>
-          <button
-            class="btn btn-accept"
-            id="install-btn"
-          >
-            Installer l'app
-          </button>
+          <button type="button"class="btn btn-close">Fermer</button>
+          <button class="btn btn-accept" id="install-btn">Installer l'app</button>
         </div>
       </div>
     </div>
