--- a/larousse/index.html
+++ b/larousse/index.html
@@ -2,14 +2,11 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no"
-    />
-    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
-    <link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#0080ff">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="i/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="i/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="i/favicon-16x16.png">
+    <link rel="mask-icon" href="i/safari-pinned-tab.svg" color="#0080ff">
     <meta name="apple-mobile-web-app-title" content="Le dico">
     <meta name="application-name" content="Le dico">
     <meta name="msapplication-TileColor" content="#2b5797">
@@ -17,48 +14,44 @@
     <meta http-equiv="Access-Control-Allow-Origin" content="*" />
     <title>PRO BTP Dico</title>
     <link rel="manifest" href="manifest.webmanifest" />
-    <script
-      crossorigin="anonymous"
-      src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"
-    ></script>
-    <!-- <script src="js/bootstrap/bootstrap.min.js"></script> -->
-    <link rel="stylesheet" href="css/critical-sass.css" />
+    <script crossorigin="anonymous" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body id="body">
-      <div id="header">
+    <div id="intro">
+      <div id="intro-logo">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 205.794 228.988"><g data-name="Calque 2"><path d="M132.575.25L39.357 13.59a24.53 24.53 0 0 0-20.809 27.758l11.553 80.739a24.53 24.53 0 0 0 27.758 20.808l31.478-4.504a5.02 5.02 0 0 1 5.68 4.258l4.047 28.282 27.245-36.344a5.02 5.02 0 0 1 3.305-1.958l21.463-3.071a24.53 24.53 0 0 0 20.809-27.758l-11.553-80.74A24.53 24.53 0 0 0 132.575.25zm-26.929 24.644c4.503-1.381 8.19.532 9.618 5.187.125.405.31 1.012.416 1.534l9.982 35.245c1.167 4.348-.283 7.56-4.483 8.849s-7.201-.559-8.622-4.828l-11.55-34.765c-.155-.506-.392-1.098-.516-1.502-1.429-4.655.602-8.323 5.155-9.72zM52.673 62.067c-4.06.996-7.197-.904-8.156-4.81a13.094 13.094 0 0 1 .041-6.496c1.625-7.592 8.777-13.979 19.828-16.69 14.598-3.581 26.382 2.028 29.32 14.005 1.905 7.76-.549 13.976-6.75 20.02-5.864 5.635-6.864 8.224-6.472 12.705.074 3.633-1.439 6.13-5.088 7.025-4.37 1.072-7.67-1.279-8.705-5.494l-.176-.72c-1.489-6.065.663-10.843 5.858-15.878 5.66-5.584 7.033-8.646 5.873-13.375-1.236-5.037-6-7.574-11.654-6.187-5.037 1.236-7.824 4.536-8.346 9.514-.478 3.605-2.438 5.612-5.573 6.381zm81.963 33.255a86.984 86.984 0 0 1-40.635 17.692A71.826 71.826 0 0 1 73.24 113a7.97 7.97 0 1 1 2.333-15.767c26.9 3.98 48.54-13.887 48.756-14.068a7.97 7.97 0 0 1 10.308 12.157zM0 214.316c0-8.892 4.446-14.41 11.481-14.41a9.013 9.013 0 0 1 8.552 5.256h.157v-11.089c0-2.615 1.596-4.002 3.818-4.002 2.25 0 3.819 1.387 3.819 4.002v30.992a3.538 3.538 0 0 1-3.792 3.87 3.576 3.576 0 0 1-3.845-3.87v-1.622h-.13c-1.23 3.14-4.316 5.388-8.63 5.388-7.01 0-11.43-5.544-11.43-14.514zm20.242.052c0-5.1-2.432-8.343-6.224-8.343-3.844 0-6.199 3.217-6.199 8.343 0 5.153 2.355 8.318 6.199 8.318 3.793 0 6.224-3.192 6.224-8.318zM32.8 192.923a4.082 4.082 0 1 1 4.08 3.95 3.96 3.96 0 0 1-4.08-3.95zm.262 32.038v-21.185c0-2.484 1.438-4.002 3.818-4.002 2.353 0 3.818 1.518 3.818 4.002v21.185c0 2.484-1.465 3.975-3.818 3.975-2.38 0-3.819-1.49-3.819-3.975zm11.692-10.593c0-8.97 5.335-14.619 13.757-14.619 5.623 0 10.305 2.72 11.821 6.695a5.345 5.345 0 0 1 .418 1.883 2.99 2.99 0 0 1-3.268 2.982 3.338 3.338 0 0 1-3.217-1.989c-1.387-2.458-3.087-3.583-5.519-3.583-3.871 0-6.25 3.192-6.25 8.605 0 5.518 2.38 8.657 6.197 8.657a5.992 5.992 0 0 0 5.493-3.295c1.02-1.596 1.857-2.25 3.478-2.25a3.023 3.023 0 0 1 3.217 3.06 4.8 4.8 0 0 1-.497 1.988c-1.674 3.818-6.46 6.486-11.822 6.486-8.447 0-13.808-5.544-13.808-14.62zm29.19-.026c0-9.075 5.492-14.593 13.887-14.593s13.887 5.492 13.887 14.593c0 9.232-5.413 14.646-13.887 14.646s-13.888-5.44-13.888-14.646zm20.006.026c0-5.57-2.405-8.787-6.119-8.787s-6.146 3.217-6.146 8.787c0 5.623 2.38 8.788 6.146 8.788 3.74 0 6.12-3.165 6.12-8.788zm10.675-.052c0-8.892 4.446-14.41 11.482-14.41a9.013 9.013 0 0 1 8.551 5.256h.157v-11.089c0-2.615 1.596-4.002 3.819-4.002 2.249 0 3.818 1.387 3.818 4.002v30.992a3.538 3.538 0 0 1-3.792 3.87 3.576 3.576 0 0 1-3.844-3.87v-1.622h-.131c-1.23 3.14-4.316 5.388-8.631 5.388-7.01 0-11.429-5.544-11.429-14.514zm20.242.052c0-5.1-2.431-8.343-6.223-8.343-3.845 0-6.2 3.217-6.2 8.343 0 5.153 2.355 8.318 6.2 8.318 3.792 0 6.223-3.192 6.223-8.318zm11.668-.026c0-9.075 5.492-14.593 13.888-14.593s13.887 5.492 13.887 14.593c0 9.232-5.414 14.646-13.887 14.646s-13.888-5.44-13.888-14.646zm20.007.026c0-5.57-2.405-8.787-6.12-8.787s-6.146 3.217-6.146 8.787c0 5.623 2.38 8.788 6.147 8.788 3.74 0 6.119-3.165 6.119-8.788zm10.674 0c0-8.97 5.335-14.619 13.757-14.619 5.623 0 10.303 2.72 11.821 6.695a5.345 5.345 0 0 1 .418 1.883 2.99 2.99 0 0 1-3.269 2.982 3.338 3.338 0 0 1-3.216-1.989c-1.387-2.458-3.087-3.583-5.519-3.583-3.871 0-6.25 3.192-6.25 8.605 0 5.518 2.38 8.657 6.197 8.657a5.992 5.992 0 0 0 5.493-3.295c1.02-1.596 1.857-2.25 3.478-2.25a3.023 3.023 0 0 1 3.217 3.06 4.8 4.8 0 0 1-.497 1.988c-1.674 3.818-6.46 6.486-11.822 6.486-8.447 0-13.808-5.544-13.808-14.62zm30.392-11.167c0-.21.027-.34.027-.419l1.334-9.572a3.216 3.216 0 0 1 3.53-3.139c2.014 0 3.296 1.152 3.296 3.035a7.282 7.282 0 0 1-.184 1.49l-2.118 8.84a2.846 2.846 0 0 1-3.112 2.59 2.556 2.556 0 0 1-2.773-2.825z" fill="#0080ff"/></g></svg>
+      </div>
+    </div>
+      <header id="header">
         <div id="offline-alert" class="small"></div>
-        <form>
+        <form id="search-form">
           <input type="text" name="search" id="search" placeholder="Que cherchez-vous ?" class="form-control small"/>
           <button type="button" class="btn" aria-label="Close" id="reset"><span aria-hidden="true">&times;</span></button>
         </form>
         <div id="count">
-          <span> <br /></span><br /><b
-            >Commencez à taper votre recherche dans le champ ci-dessus pour
-            parcourir le Larouse PRO BTP !</b
-          ><br />Pour toute demande d’évolution ou d’ajout de notion,
+          <b>Commencez à taper votre recherche dans le champ ci-dessus pour
+            parcourir le Larouse PRO BTP !</b>
+            <br />Pour toute demande d’évolution ou d’ajout de notion,
           cliquez sur le bouton “contact” en bas à droite.
         </div>
-      </div>
+      </header>
 
-    <div class="focus" id="result-container">
+    <main class="focus" id="result-container">
       <div id="result"></div>
-    </div>
+      <div id="no-more" class="hidden">
+        <p class="color-white" style="color:white;">J’ai tout donné, mais je ne trouve rien d’autre…<br /><br />
+          <span class="color-primary-light">Si vous souhaitez que j’apprenne ce mot, contactez moi directement !</span></p>
+      </div>
+    </main>
+
     <div id="more-container" style="top: 90px; height: 100vh; overflow-y: scroll; overflow-x: hidden;">
       <div class="col-12 bg-white right" style="overflow-x: hidden;"></div>
     </div>
 
-
-
     
     <!-- Install Modal -->
-    <div
-      class="modal hidden"
-      id="installPromptModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="installPromptModalLabel"
-      aria-hidden="true"
-    >
+    <div class="modal hidden" id="installPromptModal" tabindex="-1" role="dialog" aria-labelledby="installPromptModalLabel" aria-hidden="true">
       <div class="modal-body">
         <h3>Installez l'application</h3>
         <p>
@@ -66,7 +59,7 @@
           conditions, installez l'application PRO BTP Dico !
         </p>
         <div class="action">
-          <button type="button"class="btn btn-close">Fermer</button>
+          <button type="button" class="btn btn-close" data-dismiss="modal">Fermer</button>
           <button class="btn btn-accept" id="install-btn">Installer l'app</button>
         </div>
       </div>
@@ -74,9 +67,8 @@
   </body>
 
   <html>
-    <script type="text/javascript" src="search.js"></script>
-    <!-- <script type="module" src="getdata-dev.js"></script> -->
-    <script type="module" src="app.js"></script>
+    <script type="text/javascript" src="j/search.js"></script>
+    <script type="module" src="j/app.js"></script>
     <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('sw.js', {scope: './'});
