--- a/larousse/index.html
+++ b/larousse/index.html
@@ -40,6 +40,9 @@
     <main class="focus" id="result-container">
       <div id="result"></div>
       <div id="no-more" class="hidden">
+        <div id="oups">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128.779 147.645"><g data-name="Calque 2" fill="#fff"><circle cx="40.474" cy="48.322" r="12.344"/><path d="M88.727 25.238a12.344 12.344 0 1 0 12.344 12.345 12.358 12.358 0 0 0-12.344-12.345z"/><path d="M106.723 0H22.056A22.056 22.056 0 0 0 0 22.056v73.333a22.056 22.056 0 0 0 22.056 22.056h28.59a4.513 4.513 0 0 1 4.513 4.513v25.687l28.878-28.879a4.513 4.513 0 0 1 3.192-1.322h19.494a22.055 22.055 0 0 0 22.056-22.055V22.056A22.056 22.056 0 0 0 106.723 0zm-66.25 71.1a22.778 22.778 0 1 1 22.779-22.778A22.804 22.804 0 0 1 40.474 71.1zm26.472 27.158a8.497 8.497 0 1 1 8.496-8.497 8.497 8.497 0 0 1-8.496 8.497zM88.727 60.36a22.778 22.778 0 1 1 22.778-22.778A22.804 22.804 0 0 1 88.727 60.36zm28.251 8.762a6.903 6.903 0 0 1-6.903-6.904c0-3.812 6.903-13.852 6.903-13.852s6.904 10.04 6.904 13.852a6.904 6.904 0 0 1-6.904 6.904z"/></g></svg>
+        </div>
         <p class="color-white" style="color:white;">J’ai tout donné, mais je ne trouve rien d’autre…<br /><br />
           <span class="color-primary-light">Si vous souhaitez que j’apprenne ce mot, contactez moi directement !</span></p>
       </div>
