--- a/larousse/index.html
+++ b/larousse/index.html
@@ -73,16 +73,16 @@
     <script type="text/javascript" src="j/search.js"></script>
     <script type="module" src="j/app.js"></script>
     <script>
-      // if ('serviceWorker' in navigator) {
-      //   navigator.serviceWorker.register('sw.js', {scope: './'});
-      // };
-      // if (window.matchMedia('(display-mode: standalone)').matches) {
-      //   $('#installPromptModal').addClass('hidden');
-      //   // console.log('prompt dismissed !');
-      // };
-      // window.addEventListener('appinstalled', (evt) => {
-      //   $('#installPromptModal').addClass('hidden');
-      // });
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('sw.js', {scope: './'});
+      };
+      if (window.matchMedia('(display-mode: standalone)').matches) {
+        $('#installPromptModal').addClass('hidden');
+        // console.log('prompt dismissed !');
+      };
+      window.addEventListener('appinstalled', (evt) => {
+        $('#installPromptModal').addClass('hidden');
+      });
     </script>
   </html>
 </html>
