--- a/larousse/index.html
+++ b/larousse/index.html
@@ -25,7 +25,7 @@
     </div>
       <header id="header">
         <div id="offline-alert" class="small"></div>
-        <form id="search-form">
+        <form id="search-form" onsubmit="return false">
           <input type="text" name="search" id="search" placeholder="Que cherchez-vous ?" class="form-control small"/>
           <button type="button" class="btn" aria-label="Close" id="reset"><span aria-hidden="true">&times;</span></button>
         </form>
